--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
 ---
 
-<BaseLayout>hi, </BaseLayout>
+<BaseLayout
+    >hi,
+    <input type="color" />
+</BaseLayout>
