--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,7 +5,8 @@
 <div>
     <a href="/">home</a>
     <a href="/about">about</a>
-    <a href="/post">post</a>
+    <a href="/rss.xml">rss</a>
+    <a href="https://github.com/yunogasai728" target="_blank">github</a>
 </div>
 
 <style>
