--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,18 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
+const allPosts = Object.values(
+    import.meta.glob("./posts/*.md", { eager: true })
+);
 ---
 
-<BaseLayout
-    >hi,
+<BaseLayout>
+    hi,
     <input type="color" />
+
+    <div>posts</div>
+    {
+        allPosts.map((post: any) => (
+            <a href={post.url}>{post.frontmatter.title}</a>
+        ))
+    }
 </BaseLayout>
