--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,7 @@
     <a href="/">home</a>
     <a href="/about">about</a>
     <a href="/rss.xml">rss</a>
-    <a href="https://github.com/yunogasai728" target="_blank">github</a>
+    <a href="https://github.com/yunnogasai" target="_blank">github</a>
 </div>
 
 <style>
