--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,10 +8,15 @@
     <a href="/rss.xml">rss</a>
     <a href="https://github.com/yunnogasai" target="_blank">github</a>
 </div>
-
 <style>
+    div {
+        display: flex;
+        justify-content: center;
+    }
     a {
+        width: 10%;
         text-decoration: none;
+        text-align: center;
         color: black;
     }
     a:hover {
