--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,6 +23,7 @@ import Navigation from "@components/Navigation.astro";
         <meta property="og:site_name" content="Yono Post" />
         <!-- END:OGP -->
         <link rel="icon" type="image/svg+xml" href="/yunogasai.svg" />
+        <link rel="sitemap" href="/sitemap-index.xml" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <ClientRouter />
