--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const allPosts = Object.values(
 <BaseLayout>
     <div>hi,</div>
     <label for="color-select">Select color:</label>
-    <input type="color" name="color-select" value="#db8e94" />
+    <input type="color" id="color-select" value="#db8e94" />
     <div>{Date()}</div>
     <Time />
     <br />
