--- a/src/layouts/MdLayout.astro
+++ b/src/layouts/MdLayout.astro
@@ -1,5 +1,6 @@
 ---
 import "@styles/base.css";
+import "@styles/md.css";
 import { ClientRouter } from "astro:transitions";
 import Navigation from "@components/Navigation.astro";
 const { frontmatter } = Astro.props;
