--- a/src/layouts/MdLayout.astro
+++ b/src/layouts/MdLayout.astro
@@ -24,7 +24,7 @@ const { frontmatter } = Astro.props;
     <body>
         <Navigation />
         <div>
-            {tip}<slot />
+            <slot />
         </div>
     </body>
 </html>
