--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,10 +3,10 @@
 ---
 
 <div>
-    <a href="/">home</a>
-    <a href="/about">about</a>
-    <a href="/rss.xml">rss</a>
-    <a href="https://github.com/yunnogasai" target="_blank">github</a>
+    <a href="/">/(home)</a>
+    <a href="/about">/about</a>
+    <a href="/rss.xml">/rss</a>
+    <a href="https://github.com/yunnogasai" target="_blank">/github</a>
 </div>
 <style>
     div {
