--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,5 +9,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>404</title>
     </head>
-    <body> 这里什么都没有哦. </body>
+    <body
+        ><a href="/" style="color:rgb(225, 97, 47);text-decoration:none;"
+            >/(home)</a
+        >这里什么都没有哦.
+    </body>
 </html>
